# LotteryCpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Lottery_Mega_Millions_Winning_Numbers__Beginning_2002.csv  Lottery_Mega_Millions_Winning_Numbers__Beginning_2002.csv:Zone.Identifier  Lottery_Mega_Millions_Winning_Numbers__Beginning_2002_20240707.csv  Lottery_Mega_Millions_Winning_Numbers__Beginning_2002_20240707.csv:Zone.Identifier  README.md
.PVS-Studio/State/: WindowState.json
LotteryCpp/inc/: api.h  data_row.h  data_table.h  drawing.h  exceptions.h  history.h  main.h  mega_millions.h  test.h
LotteryCpp/src/: CMakeLists.txt  api.cpp  data_row.cpp  data_table.cpp  drawing.cpp  exceptions.cpp  history.cpp  main.cpp  mega_millions.cpp  test.cpp
SString/inc/: s_string.h
SString/src/: CMakeLists.txt  s_string.cpp
Timestamp/inc/: timestamp.h
Timestamp/src/: CMakeLists.txt  timestamp.cpp
Utils/inc/: utils.h
Utils/src/: CMakeLists.txt  utils.cpp
